Add two extra sections named team and gallery for the home page

--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
+    "flowbite-react": "^0.6.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-photo-album": "^2.3.0",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0"
