--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-photo-album": "^2.3.0",
     "react-router-dom": "^6.18.0",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0"
   },
